--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Zombie Attact</title>
+    <link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <div class="the-game">
+        <div class="container">
+                <div class="points">0</div>
+                <div class="title">The Zombie Attact</div>
+        </div>
+    </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
