--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="the-game">
         <div class="container">
-                <div class="points">0</div>
+                <div class="point">  
+                    score<br>
+                    <span class="points">0</span><br><br>
+                    missed<br>
+                    <span class="missed">0</span>
+                </div>
                 <div class="title">The Zombie Attact</div>
         </div>
     </div>
