--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     missed<br>
                     <span class="missed">0</span>
                 </div>
-                <div class="title">The Zombie Attact</div>
+                <div class="title">The Zombie Attack</div>
         </div>
     </div>
     <script src="./js/app.js"></script>
